# otus-cpp-basics-lesson5

./: CMakeLists.txt  IStatistics.cpp  IStatistics.hpp  Max.cpp  Max.hpp  Mean.cpp  Mean.hpp  Min.cpp  Min.hpp  Pct.cpp  Pct.hpp  README.md  Std.cpp  Std.hpp  main.cpp  statistics.cpp  statistics.hpp
